Theme added in header

--- a/index.html
+++ b/index.html
@@ -18,14 +18,23 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse pg-name" id="navbarNavAltMarkup">
-            <div class="navbar-nav lato-bold-italic">
+          <div class="collapse navbar-collapse pg-name lato-bold-italic" id="navbarNavAltMarkup">
+            <div class="navbar-nav ">
               <a class="nav-link links" href="./index.html">Home</a>
               <a class="nav-link links" href="./pages/about_us.html">About-US</a>
               <a class="nav-link links" href="./pages/contact_us.html">Contact-US</a>
               <a class="nav-link links" href="./pages/services.html">Services</a>
               <a class="nav-link links" href="./pages/login.html">Login</a>
               <a class="nav-link links" href="./pages/review.html">Review</a>
+              <li class="nav-item dropdown ">
+                <a class="nav-link dropdown-toggle links" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Theme
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#"><img src="./logo/night-mode.png" height="28px">&nbsp; Dark</a></li>
+                  <li><a class="dropdown-item" href="#"><img src="./logo/sun.png" height="26px"> &nbsp; Light</a></li>
+                </ul>
+              </li>
             </div>
           </div>
         </div>
