footer ,login & registration page added

--- a/index.html
+++ b/index.html
@@ -26,19 +26,51 @@
               <a class="nav-link links" href="./pages/services.html">Services</a>
               <a class="nav-link links" href="./pages/login.html">Login</a>
               <a class="nav-link links" href="./pages/review.html">Review</a>
-              <li class="nav-item dropdown ">
-                <a class="nav-link dropdown-toggle links" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Theme
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#"><img src="./logo/night-mode.png" height="28px">&nbsp; Dark</a></li>
-                  <li><a class="dropdown-item" href="#"><img src="./logo/sun.png" height="26px"> &nbsp; Light</a></li>
-                </ul>
-              </li>
+              <img src="./logo/night-mode.png" class="links theme-icon" height="38px" id="dark" onclick="darkmode()">
+              <img src="./logo/sun.png" class="links theme-icon" height="34px" id="light" onclick="lightmode()">
             </div>
           </div>
         </div>
       </nav>
-    
+    <div>
+      HHIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
+    </div>
+      
+      <footer class="footr">
+        <div class="f">
+            We have completed 10+ events in Maharashtra
+        </div>
+        <div class="ft">
+            <p class="description sedan-sc-regular"><b>Palavi Beauty Parlour<br/>Bringing out the beauty in you !</b><br/><span class="description-f lato-bold-italic">Our passion is simple – we live to help every guest look and feel beautiful.<br/> We know our guests expect extraordinary results. Our salon professionals<br/> continously explore the latest trends and techniques to transform your<br/> look with styles inspired by fashion runways from around the world.</span></p>
+            <div class="address">
+                <ul type="circle">
+                <img src="./logo/maps.png"height="20px" />&nbsp;&nbsp;Address
+                    <li><a href="https://maps.app.goo.gl/ck8WCd9jwUHxjPQt7" target="_blank" class="mp">Velapur</a></li>
+                    <li><a href="https://maps.app.goo.gl/uJiYLRU4PK4J26rR8" target="_blank" class="mp">Solapur</a></li>
+                </ul>
+            </div>
+            <div class="call-us">
+                <ul type="circle">
+                <img src="./logo/call.png" height="20px"/>&nbsp;&nbsp;Call-us
+                    <li><a href="tel:9420939808" target="_blank" class="cnt">+91 9420939808</a></li>
+                    <li><a href="tel:7498331704" target="_blank" class="cnt">+91 7498331704</a></li>
+                    <li><a href="tel:9322484363" target="_blank" class="cnt">+91 9322484363</a></li>
+                </ul>
+            </div>
+            <div class="mail">
+                <ul type="circle">
+                    <img src="./logo/email.png" height="20px" />&nbsp;&nbsp;Email us
+                    <li><a href="mailto:palavibeauty@gmail.com" target="_blank" class="ml">palavibeauty@gmail.com</a></li>
+                    <li><a href="mailto:pallavichougule@gmail.com" target="_blank" class="ml">pallavichougule@gmail.com</a></li>
+                    <li><a href="mailto:0103rutujajadhav@gmail.com" target="_blank" class="ml">0103rutujajadhav@gmail.com</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="ft2">
+            Copyright &copy; All Rights Reserved to RJ.
+        </div>
+    </footer>
+
+  <script src="./js/script.js"></script>    
 </body>
 </html>
