--- a/pages/review.html
+++ b/pages/review.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="./../css/style.css">
-    <link rel="stylesheet" href="./../css/login.css">
+    <link rel="stylesheet" href="./../css/review.css">
 </head>
 <body id="body">
     <nav class="navbar navbar-expand-lg bg-body-tertiary ">
@@ -32,7 +32,35 @@
         </div>
       </nav>
 
-      
+      <div class="body lato-bold-italic">
+        <h1>Feedback Form</h1>
+  
+      <div class="card">
+          <h1>Rate Our Service</h1>
+          
+          <div class="review_card">
+              <span class="review">Write Review Here</span>
+          <textarea class="ta" rows="2" cols="15" required></textarea>
+          </div> 
+  
+          <br />
+  
+      <div class="container">
+          <img class="star" id="s1" src="./../logo/star1.png" alt="star_img" onclick="star(1)">
+          <img class="star" id="s2" src="./../logo/star1.png" alt="star_img" onclick="star(2)">
+          <img class="star" id="s3" src="./../logo/star1.png" alt="star_img" onclick="star(3)">
+          <img class="star" id="s4" src="./../logo/star1.png" alt="star_img" onclick="star(4)">
+          <img class="star" id="s5" src="./../logo/star1.png" alt="star_img" onclick="star(5)">
+    </div>
+  
+          <h3 id="rating">
+              Rating is: 0/5
+          </h3>
+  
+          <button class="sbtn lato-bold-italic" id="submit_btn" onclick="submit()">Submit</button>
+      </div>
+  </div>
+
       <footer class="footr">
         <div class="f">
             We have completed 10+ events in Maharashtra
@@ -69,6 +97,6 @@
     </footer>
 
   <script src="./../js/script.js"></script> 
-  <script src="./../js/login.js"></script> 
+  <script src="./../js/review.js"></script> 
 </body>
 </html>
