--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body id="body">
-
+ <!--Header start-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary ">
         <div class="container-fluid  custom-navbar">
           <a class="navbar-brand sedan-sc-regular custom-navbar-brand " href="#"  >Palavi Beauty Parlour</a>
@@ -32,10 +32,13 @@
           </div>
         </div>
       </nav>
+   <!--Header end-->
+  <!--main-body start-->
     <div>
       HHIIIIIIIIIIIIIIIIIIIIIIIIIIIIII
     </div>
-      
+  <!--main-body end-->
+   <!--footer start-->
       <footer class="footr">
         <div class="f">
             We have completed 10+ events in Maharashtra
@@ -70,7 +73,7 @@
             Copyright &copy; All Rights Reserved to RJ.
         </div>
     </footer>
-
+ <!--footer end-->
   <script src="./js/script.js"></script>    
 </body>
 </html>
