--- a/pages/login.html
+++ b/pages/login.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="./../css/login.css">
 </head>
 <body id="body">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+ <!--header start-->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary ">
         <div class="container-fluid  custom-navbar">
           <a class="navbar-brand sedan-sc-regular custom-navbar-brand " href="#"  >Palavi Beauty Parlour</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,7 +32,8 @@
           </div>
         </div>
       </nav>
-      
+<!--header end-->
+<!--main-body start-->     
       <div class="formbody">
         <section class="formcontainer">
             <h1> Login</h1>
@@ -50,7 +52,8 @@
             </div>
         </section>
       </div>
-
+<!--main-body end-->
+ <!--footer start-->
     <footer class="footr">
         <div class="f">
             We have completed 10+ events in Maharashtra
@@ -85,7 +88,7 @@
             Copyright &copy; All Rights Reserved to RJ.
         </div>
     </footer>
-
+ <!--footer end-->
   <script src="./../js/script.js"></script> 
   <script src="./../js/login.js"></script> 
 </body>
