--- a/pages/register.html
+++ b/pages/register.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./../css/register.css">
 </head>
 <body id="body">
+ <!--header start-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary ">
         <div class="container-fluid  custom-navbar">
           <a class="navbar-brand sedan-sc-regular custom-navbar-brand " href="#"  >Palavi Beauty Parlour</a>
@@ -31,7 +32,8 @@
           </div>
         </div>
       </nav>
-
+<!--header end-->
+ <!--main-body start-->
     <div class="formbody">
         <section class="formcontainer">
             <h1>Sign up</h1>
@@ -60,6 +62,8 @@
             </div>
         </section>
     </div>
+<!--main-body end-->
+ <!--footer start-->
  <footer class="footr">
         <div class="f">
             We have completed 10+ events in Maharashtra
@@ -94,7 +98,7 @@
             Copyright &copy; All Rights Reserved to RJ.
         </div>
     </footer>
-
+ <!--footer end-->
   <script src="./../js/script.js"></script> 
   <script src="./../js/register.js"></script> 
 </body>
