--- a/pages/review.html
+++ b/pages/review.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./../css/review.css">
 </head>
 <body id="body">
+   <!--header start-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary ">
         <div class="container-fluid  custom-navbar">
           <a class="navbar-brand sedan-sc-regular custom-navbar-brand " href="#"  >Palavi Beauty Parlour</a>
@@ -31,7 +32,8 @@
           </div>
         </div>
       </nav>
-
+ <!--header end-->
+  <!--main-body start-->
       <div class="body lato-bold-italic">
         <h1>Feedback Form</h1>
   
@@ -60,7 +62,8 @@
           <button class="sbtn lato-bold-italic" id="submit_btn" onclick="submit()">Submit</button>
       </div>
   </div>
-
+ <!--main-body end-->
+  <!--footer start-->
     <footer class="footr">
         <div class="f">
             We have completed 10+ events in Maharashtra
@@ -95,7 +98,7 @@
             Copyright &copy; All Rights Reserved to RJ.
         </div>
     </footer>
-
+ <!--footer end-->
   <script src="./../js/script.js"></script> 
   <script src="./../js/review.js"></script> 
 </body>
