header footer added to about us page

--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -38,11 +38,11 @@
         <div class="submain-d1 lato-bold-italic">
             <div class="d">
                 <img src="./../logo/road.png" class="contact-logo"/>
-                <p class="info">Address :&nbsp;A/p velapur<br/> Near hodge gift house,in front of Ram Mandir </p>
+                <p class="info">Address :<a href="https://maps.app.goo.gl/SRiQzXJ9ahfSkJjL6" target="_blank" class="datail ">&nbsp;&nbsp;A/p velapur<br/> Near hodge gift house,in front of Ram Mandir</a> </p>
             </div>
             <div class="d">
                 <img src="./../logo/call.png" class="contact-logo"/>
-                <p class="info">Phone :<a href="tel:9420939808" target="_blank" class="datail">&nbsp;&nbsp; +91 9420939808</a></p>
+                <p class="info">Phone :<a href="tel:9420939808" target="_blank" class="datail">&nbsp;&nbsp;+91 9420939808</a></p>
             </div>
             <div class="d">
                 <img src="./../logo/email.png" class="contact-logo"/>
