1st section added of about us page

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="./../css/style.css">
-    <link rel="stylesheet" href="./../css/contact.css">
+    <link rel="stylesheet" href="./../css/about.css">
 </head>
 <body id="body">
     <!--Header start-->
@@ -33,6 +33,21 @@
         </div>
       </nav>
      <!--Header end-->
+      <!--main-body start-->
+      <p class="sedan-sc-regular page-heading"> About Our Story &nbsp;&nbsp;<sup>Since 2023</sup></p>
+        <div class="main-body lato-bold-italic">
+            <div class="about-d ">
+                <img src="./../img/Entrance.jpeg" class="parlour-img"/>
+            </div>
+            <div class="about-d detail2">Welcome to<span class="sedan-sc-regular"> Palavi Beauty Parlour</span>, where beauty meets relaxation! Our parlour is dedicated to providing a serene escape from the hustle and bustle of everyday life, offering a range of premium beauty and wellness services tailored to enhance your natural beauty and rejuvenate your mind, body, and soul.<br/><br/>
+                At<span class="sedan-sc-regular"> Palavi Beauty Parlour</span>, we believe that self-care is not a luxury but a necessity. Our team of experienced and passionate professionals is committed to delivering exceptional service with a personal touch, ensuring that each visit leaves you feeling pampered, refreshed, and confident.<br/><br/>
+                <span class="sedan-sc-regular">&nbsp;~&nbsp; Pallavi Chougule</span>
+            </div>
+        </div>
+        <div class="about-image">
+            <img src="./../img/parlour.jpg" class="about-im" />
+        </div>
+    <!--main-body end-->
      <!--footer start-->
       <footer class="footr">
         <div class="f">
