heading style updated for all pages

--- a/pages/login.html
+++ b/pages/login.html
@@ -36,19 +36,19 @@
 <!--main-body start-->     
       <div class="formbody">
         <section class="formcontainer">
-            <h1> Login</h1>
+            <h1 class="sedan-sc-regular"> Login</h1>
             <div class="login">
-            <form class="form">
+            <form class="form lato-bold-italic">
                 <label for="userId"><span> Email or Phone </span></label>
-                <input type="text" name="username" id="userId" required>
+                <input type="text" name="username" id="userId" placeholder="Enter your email" required>
                 <label for="password"><span> Password </span></label>
-                <input type="password" name="username" id="password" required>
+                <input type="password" name="username" id="password" placeholder="Enter your password" required>
                 <br>
                 <div class="for"><a class="for" href="#">Forget Password</a></div>
                 <button id="loginBtn" onclick="login()">Login</button>
              </form>
             </div>
-            <div class="link">Not a member? <a class="for" href="./register.html">Sign up</a> 
+            <div class="link lato-bold-italic">Not a member? <a class="for" href="./register.html">Sign up</a> 
             </div>
         </section>
       </div>
