--- a/pages/register.html
+++ b/pages/register.html
@@ -36,9 +36,9 @@
  <!--main-body start-->
     <div class="formbody">
         <section class="formcontainer">
-            <h1>Sign up</h1>
+            <h1 class="sedan-sc-regular">Sign up</h1>
             <div class="login">
-            <form class="form">
+            <form class="form lato-bold-italic">
                 <label for="name" class="Head1">Enter Full Name:</label>
                 <input class="input" type="text" id="name" placeholder="Enter your Name" required/><br/>                
     
@@ -58,7 +58,7 @@
                 <button id="registerBtn" onclick="register()">sign up</button>
              </form><br/>
             </div>
-            <div class="link">Already a Member <a class="for" href="./login.html">Login</a> 
+            <div class="link lato-bold-italic">Already a Member <a class="for" href="./login.html">Login</a> 
             </div>
         </section>
     </div>
