--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -44,9 +44,37 @@
                 <span class="sedan-sc-regular">&nbsp;~&nbsp; Pallavi Chougule</span>
             </div>
         </div>
-        <div class="about-image">
-            <img src="./../img/parlour.jpg" class="about-im" />
-        </div>
+        
+        <div id="carouselExampleIndicators" class="carousel slide slide-img ">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./../img/parlour.jpg" class="d-block w-100" >
+              </div>
+              <div class="carousel-item ">
+                <img src="./../img/brush2.jpg" class="d-block w-100" >
+              </div>
+              <div class="carousel-item">
+                <img src="./../img/woman-washing-head-hairsalon.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="./../img/hairdresserinstruments.jpg" class="d-block w-100">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
     <!--main-body end-->
      <!--footer start-->
       <footer class="footr">
