social links added in footer

--- a/index.html
+++ b/index.html
@@ -44,7 +44,14 @@
             We have completed 10+ events in Maharashtra
         </div>
         <div class="ft">
+          <div>
             <p class="description sedan-sc-regular"><b>Palavi Beauty Parlour<br/>Bringing out the beauty in you !</b><br/><span class="description-f lato-bold-italic">Our passion is simple – we live to help every guest look and feel beautiful.<br/> We know our guests expect extraordinary results. Our salon professionals<br/> continously explore the latest trends and techniques to transform your<br/> look with styles inspired by fashion runways from around the world.</span></p>
+            <div>
+              <a href="https://www.instagram.com/palavi_beautylife91?igsh=OWh2bHpkcnNiNmpw" target="_blank" ><img src="./logo/instagram.png" class="social-logo"/></a>
+              <a href="https://www.linkedin.com/in/rutuja-jadhav-893a55293?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" ><img src="./logo/linkedin.png" class="social-logo"/></a>
+              <a href="https://web.whatsapp.com/" target="_blank" ><img src="./logo/whatsapp.png"class="social-logo"/></a>
+            </div>
+          </div>
             <div class="address">
                 <ul type="circle">
                 <img src="./logo/maps.png"height="20px" />&nbsp;&nbsp;Address
