3rd section added to about us page with html,css & js

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -75,6 +75,17 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+          <div>
+            <img src="./../logo/feedback.png" class="review-logo"/>
+            <div class="review-container">
+              <p id="1text" class="lato-bold-italic">Absolutely thrilled with my experience at Palavi Beauty Parlour! Impeccable service, talented stylists, and a welcoming atmosphere. Will definitely be back!<br/><sub class="customer-name sedan-sc-regular">~ Samiksha</sub></p>
+            </div>
+          <div class="btn-container">
+              <img src="./../logo/review-circle.png" class="review-circle" onclick="toggleReview('1')"/>
+              <img src="./../logo/review-circle.png" class="review-circle" onclick="toggleReview('2')"/>
+              <img src="./../logo/review-circle.png" class="review-circle" onclick="toggleReview('3')"/>
+          </div>
+          </div>
     <!--main-body end-->
      <!--footer start-->
       <footer class="footr">
@@ -120,7 +131,7 @@
     </footer>
     <!--footer end-->
   <script src="./../js/script.js"></script> 
-  <script src="./../js/contact.js"></script> 
+  <script src="./../js/about.js"></script> 
 </body>
 </html>
     
