basic card added to services page

--- a/pages/services.html
+++ b/pages/services.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="./../css/style.css">
-    <link rel="stylesheet" href="./../css/about.css">
+    <link rel="stylesheet" href="./../css/services.css">
 </head>
 <body id="body">
     <!--Header start-->
@@ -33,6 +33,49 @@
         </div>
       </nav>
      <!--Header end-->
+     <!--main-body start-->
+     <p class="sedan-sc-regular page-heading">Our Services</p>
+     <div class="service-container">
+        <div class="card service-card" style="width: 18rem;">
+            <img src="./../img/herbal.jpg" class="card-img-top service-img" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+        </div>
+        <div class="card service-card" style="width: 18rem;">
+            <img src="./../img/woman-washing-head-hairsalon.jpg" class="card-img-top service-img" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+        </div>
+        <div class="card service-card" style="width: 18rem;">
+            <img src="./../img/woman-washing-head-hairsalon.jpg" class="card-img-top service-img" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+        </div>
+        <div class="card service-card" style="width: 18rem;">
+            <img src="./../img/woman-washing-head-hairsalon.jpg" class="card-img-top service-img" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+        </div>
+        <div class="card service-card" style="width: 18rem;">
+            <img src="./../img/woman-washing-head-hairsalon.jpg" class="card-img-top service-img" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+        </div>
+        <div class="card service-card" style="width: 18rem;">
+            <img src="./../img/woman-washing-head-hairsalon.jpg" class="card-img-top service-img" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+        </div>
+        
+
+     </div>
+     <!--main-body end-->
       <!--footer start-->
       <footer class="footr">
         <div class="f">
