review file renamed & heading added in services card

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -25,7 +25,7 @@
               <a class="nav-link links" href="./contact_us.html">Contact-US</a>
               <a class="nav-link links" href="./services.html">Services</a>
               <a class="nav-link links" href="./login.html">Login</a>
-              <a class="nav-link links" href="./review.html">Review</a>
+              <a class="nav-link links" href="./feedback.html">Feedback</a>
               <img src="./../logo/night-mode.png" class="links theme-icon" height="38px" id="dark" onclick="darkmode()">
               <img src="./../logo/sun.png" class="links theme-icon" height="34px" id="light" onclick="lightmode()">
             </div>
