--- a/pages/services.html
+++ b/pages/services.html
@@ -25,7 +25,7 @@
               <a class="nav-link links" href="./contact_us.html">Contact-US</a>
               <a class="nav-link links" href="./services.html">Services</a>
               <a class="nav-link links" href="./login.html">Login</a>
-              <a class="nav-link links" href="./review.html">Review</a>
+              <a class="nav-link links" href="./feedback.html">Feedback</a>
               <img src="./../logo/night-mode.png" class="links theme-icon" height="38px" id="dark" onclick="darkmode()">
               <img src="./../logo/sun.png" class="links theme-icon" height="34px" id="light" onclick="lightmode()">
             </div>
@@ -35,41 +35,53 @@
      <!--Header end-->
      <!--main-body start-->
      <p class="sedan-sc-regular page-heading">Our Services</p>
-     <div class="service-container">
+     <div class="service-container  lato-bold-italic">
         <div class="card service-card" style="width: 18rem;">
             <img src="./../img/herbal.jpg" class="card-img-top service-img" alt="...">
-            <div class="card-body">
+            <div class="card-body ">
+              <h4>Bleech </h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <button class="know-btn" type="submit">Know More</button>
             </div>
         </div>
         <div class="card service-card" style="width: 18rem;">
             <img src="./../img/woman-washing-head-hairsalon.jpg" class="card-img-top service-img" alt="...">
             <div class="card-body">
+              <h4>Hair Care</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <button class="know-btn" type="submit">Know More</button>
+            </div>
+        </div>
+        <div class="card service-card" style="width: 18rem;">
+            <img src="./../img/bridal-makeup.jpg" class="card-img-top service-img" alt="...">
+            <div class="card-body">
+              <h4>Make-Up</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <button class="know-btn" type="submit">Know More</button>
+            </div>
+        </div>
+        <div class="card service-card" style="width: 18rem;">
+            <img src="./../img/bodymasssage.jpg" class="card-img-top service-img" alt="...">
+            <div class="card-body">
+              <h4>Body Massage</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <button class="know-btn" type="submit">Know More</button>
             </div>
         </div>
         <div class="card service-card" style="width: 18rem;">
             <img src="./../img/woman-washing-head-hairsalon.jpg" class="card-img-top service-img" alt="...">
             <div class="card-body">
+              <h4>Hair Cut's</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <button class="know-btn" type="submit">Know More</button>
             </div>
         </div>
         <div class="card service-card" style="width: 18rem;">
             <img src="./../img/woman-washing-head-hairsalon.jpg" class="card-img-top service-img" alt="...">
             <div class="card-body">
+              <h4>Spa (skin)</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-        </div>
-        <div class="card service-card" style="width: 18rem;">
-            <img src="./../img/woman-washing-head-hairsalon.jpg" class="card-img-top service-img" alt="...">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-        </div>
-        <div class="card service-card" style="width: 18rem;">
-            <img src="./../img/woman-washing-head-hairsalon.jpg" class="card-img-top service-img" alt="...">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <button class="know-btn" type="submit">Know More</button>
             </div>
         </div>
         
