--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <a class="nav-link links" href="./pages/contact_us.html">Contact-US</a>
               <a class="nav-link links" href="./pages/services.html">Services</a>
               <a class="nav-link links" href="./pages/login.html">Login</a>
-              <a class="nav-link links" href="./pages/review.html">Review</a>
+              <a class="nav-link links" href="./pages/feedback.html">Feedback</a>
               <img src="./logo/night-mode.png" class="links theme-icon" height="38px" id="dark" onclick="darkmode()">
               <img src="./logo/sun.png" class="links theme-icon" height="34px" id="light" onclick="lightmode()">
             </div>
