--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="./../css/style.css">
-    <link rel="stylesheet" href="./../css/review.css">
+    <link rel="stylesheet" href="./../css/feedback.css">
 </head>
 <body id="body">
    <!--header start-->
@@ -25,7 +25,7 @@
               <a class="nav-link links" href="./contact_us.html">Contact-US</a>
               <a class="nav-link links" href="./services.html">Services</a>
               <a class="nav-link links" href="./login.html">Login</a>
-              <a class="nav-link links" href="./review.html">Review</a>
+              <a class="nav-link links" href="./feedback.html">Feedback</a>
               <img src="./../logo/night-mode.png" class="links theme-icon" height="38px" id="dark" onclick="darkmode()">
               <img src="./../logo/sun.png" class="links theme-icon" height="34px" id="light" onclick="lightmode()">
             </div>
@@ -105,6 +105,6 @@
     </footer>
  <!--footer end-->
   <script src="./../js/script.js"></script> 
-  <script src="./../js/review.js"></script> 
+  <script src="./../js/feedback.js"></script> 
 </body>
 </html>
