--- a/pages/services.html
+++ b/pages/services.html
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="card service-card" style="width: 18rem;">
-            <img src="./../img/woman-washing-head-hairsalon.jpg" class="card-img-top service-img" alt="...">
+            <img src="./../img/haircut.jpg" class="card-img-top service-img" alt="...">
             <div class="card-body">
               <h4>Hair Cut's</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="card service-card" style="width: 18rem;">
-            <img src="./../img/woman-washing-head-hairsalon.jpg" class="card-img-top service-img" alt="...">
+            <img src="./../img/skin spa.jpg" class="card-img-top service-img" alt="...">
             <div class="card-body">
               <h4>Spa (skin)</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
