fixed header at top to all pages

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body id="body">
  <!--Header start-->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary ">
-        <div class="container-fluid  custom-navbar">
+    <nav class="navbar navbar-expand-lg  fixed-top ">
+        <div class="container-fluid ">
           <a class="navbar-brand sedan-sc-regular custom-navbar-brand " href="#"  >Palavi Beauty Parlour</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
