--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -24,8 +24,8 @@
               <a class="nav-link links" href="./about_us.html">About-US</a>
               <a class="nav-link links" href="./contact_us.html">Contact-US</a>
               <a class="nav-link links" href="./services.html">Services</a>
-              <a class="nav-link links" href="./login.html">Login</a>
               <a class="nav-link links" href="./feedback.html">Feedback</a>
+              <a class="nav-link links" href="./login.html"><img src="./../logo/login.png" height="30px"/></a>
               <img src="./../logo/night-mode.png" class="links theme-icon" height="38px" id="dark" onclick="darkmode()">
               <img src="./../logo/sun.png" class="links theme-icon" height="34px" id="light" onclick="lightmode()">
             </div>
