description added in card's

--- a/pages/services.html
+++ b/pages/services.html
@@ -40,7 +40,7 @@
             <img src="./../img/herbal.jpg" class="card-img-top service-img" alt="...">
             <div class="card-body ">
               <h4>Bleech </h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">We provide six types of bleech like Diamond Bleech , Gold Bleech, Fruit Bleech, Whitening Bleech ,Oxy Glow Bleech & D-Tan Bleech.</p>
               <button class="know-btn" type="submit">Know More</button>
             </div>
         </div>
@@ -48,7 +48,7 @@
             <img src="./../img/woman-washing-head-hairsalon.jpg" class="card-img-top service-img" alt="...">
             <div class="card-body">
               <h4>Hair Care</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">In Hair Care we provide Hair Spa,Hair Color,Straightening & Keratin Treatment. L'Oreal,Wells & HP these types of spa are available</p>
               <button class="know-btn" type="submit">Know More</button>
             </div>
         </div>
@@ -56,15 +56,15 @@
             <img src="./../img/bridal-makeup.jpg" class="card-img-top service-img" alt="...">
             <div class="card-body">
               <h4>Make-Up</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Simple Make-Up,Simple Make-Up with HD Products , Bridal , Party , Maternity Photoshoot , Birthday Photoshoot are done by us.</p>
               <button class="know-btn" type="submit">Know More</button>
             </div>
         </div>
         <div class="card service-card" style="width: 18rem;">
-            <img src="./../img/bodymasssage.jpg" class="card-img-top service-img" alt="...">
+            <img src="./../img/facial.jpg" class="card-img-top service-img" alt="...">
             <div class="card-body">
-              <h4>Body Massage</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h4>Facial's</h4>
+              <p class="card-text">In Facial Fruit,Diamond,Nature Gold,Detan,MultiVitamin,Papaya,Play White these are available.</p>
               <button class="know-btn" type="submit">Know More</button>
             </div>
         </div>
@@ -72,7 +72,7 @@
             <img src="./../img/haircut.jpg" class="card-img-top service-img" alt="...">
             <div class="card-body">
               <h4>Hair Cut's</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">In Hair Cut these Cut's are available Straight Cut , U Cut , Layer Cut , Step Cut , Butterfly Cut</p>
               <button class="know-btn" type="submit">Know More</button>
             </div>
         </div>
@@ -80,7 +80,7 @@
             <img src="./../img/skin spa.jpg" class="card-img-top service-img" alt="...">
             <div class="card-body">
               <h4>Spa (skin)</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">In Skin Spa Hand Polishing, Leg Polishing & Body Polishing are available. </p>
               <button class="know-btn" type="submit">Know More</button>
             </div>
         </div>
