link's added to button in service card

--- a/pages/services.html
+++ b/pages/services.html
@@ -41,7 +41,7 @@
             <div class="card-body ">
               <h4>Bleech </h4>
               <p class="card-text">We provide six types of bleech like Diamond Bleech , Gold Bleech, Fruit Bleech, Whitening Bleech ,Oxy Glow Bleech & D-Tan Bleech.</p>
-              <button class="know-btn" type="submit">Know More</button>
+              <a href="./../service-pages/bleech.html" class="sub-page"><button class="know-btn" type="submit">Know More</button></a>
             </div>
         </div>
         <div class="card service-card" style="width: 18rem;">
@@ -49,7 +49,7 @@
             <div class="card-body">
               <h4>Hair Care</h4>
               <p class="card-text">In Hair Care we provide Hair Spa,Hair Color,Straightening & Keratin Treatment. L'Oreal,Wells & HP these types of spa are available</p>
-              <button class="know-btn" type="submit">Know More</button>
+              <a href="./../service-pages/haircare.html" class="sub-page"><button class="know-btn" type="submit">Know More</button></a>
             </div>
         </div>
         <div class="card service-card" style="width: 18rem;">
@@ -57,7 +57,7 @@
             <div class="card-body">
               <h4>Make-Up</h4>
               <p class="card-text">Simple Make-Up,Simple Make-Up with HD Products , Bridal , Party , Maternity Photoshoot , Birthday Photoshoot are done by us.</p>
-              <button class="know-btn" type="submit">Know More</button>
+              <a href="./../service-pages/makeup.html" class="sub-page"><button class="know-btn" type="submit">Know More</button></a>
             </div>
         </div>
         <div class="card service-card" style="width: 18rem;">
@@ -65,7 +65,7 @@
             <div class="card-body">
               <h4>Facial's</h4>
               <p class="card-text">In Facial Fruit,Diamond,Nature Gold,Detan,MultiVitamin,Papaya,Play White these are available.</p>
-              <button class="know-btn" type="submit">Know More</button>
+              <a href="./../service-pages/facial.html" class="sub-page"><button class="know-btn" type="submit">Know More</button></a>
             </div>
         </div>
         <div class="card service-card" style="width: 18rem;">
@@ -73,7 +73,7 @@
             <div class="card-body">
               <h4>Hair Cut's</h4>
               <p class="card-text">In Hair Cut these Cut's are available Straight Cut , U Cut , Layer Cut , Step Cut , Butterfly Cut</p>
-              <button class="know-btn" type="submit">Know More</button>
+              <a href="./../service-pages/haircut.html" class="sub-page"><button class="know-btn" type="submit">Know More</button></a>
             </div>
         </div>
         <div class="card service-card" style="width: 18rem;">
@@ -81,7 +81,7 @@
             <div class="card-body">
               <h4>Spa (skin)</h4>
               <p class="card-text">In Skin Spa Hand Polishing, Leg Polishing & Body Polishing are available. </p>
-              <button class="know-btn" type="submit">Know More</button>
+              <a href="./../service-pages/skinspa.html" class="sub-page"><button class="know-btn" type="submit">Know More</button></a>
             </div>
         </div>
         
