--- a/pages/login.html
+++ b/pages/login.html
@@ -40,12 +40,12 @@
             <div class="login">
             <form class="form lato-bold-italic">
                 <label for="userId"><span> Email or Phone </span></label>
-                <input type="text" name="username" id="userId" placeholder="Enter your email" required>
+                <input type="text" name="username" id="userId" class="lato-bold-italic" placeholder="Enter your email" required>
                 <label for="password"><span> Password </span></label>
-                <input type="password" name="username" id="password" placeholder="Enter your password" required>
+                <input type="password" name="username" id="password" class="lato-bold-italic" placeholder="Enter your password" required>
                 <br>
-                <div class="for"><a class="for" href="#">Forget Password</a></div>
-                <button id="loginBtn" onclick="login()">Login</button>
+                <div class="for lato-bold-italic"><a class="for" href="#">Forget Password</a></div>
+                <button id="loginBtn" onclick="login()" class="lato-bold-italic">Login</button>
              </form>
             </div>
             <div class="link lato-bold-italic">Not a member? <a class="for" href="./register.html">Sign up</a> 
